# claude-context-keeper

./: .gitignore  README.md  pyproject.toml
cck/: __init__.py  cli.py  config.py  generator.py  history.py  scanner.py
tests/: test_generator.py  test_scanner.py
