[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-context-keeper"
version = "0.1.0"
description = "Auto-generate and update CLAUDE.md for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "takawasi" }
]
keywords = ["claude", "claude-code", "llm", "context", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cck = "cck.cli:main"

[project.urls]
Homepage = "https://github.com/takawasi/claude-context-keeper"
Repository = "https://github.com/takawasi/claude-context-keeper"

[tool.hatch.build.targets.wheel]
packages = ["cck"]
